# GPEC

./: CMakeLists.txt  main.cpp
Calculator/: Calculator.cpp  Calculator.h  Token.cpp  Token.h
Calculator/TokenTypes/: Operators.cpp  Operators.h  Term.cpp  Term.h
Calculator/TokenTypes/ValueTypes/: Real.cpp  Real.h
Datastructs/: Node.cpp  Node.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
